# BigProject

./: pyproject.toml  requirements.txt
src/RAG/: data_loader.ipynb  embedding.ipynb  vector_store.ipynb
